# Lancer-2-rayons

./: .gitignore  .~lock.image.ppm#  CMakeLists.txt  README.md  avant_13.ppm  before_14.ppm  glass_air_bubble.ppm  image.ppm  image2.ppm  image_4_spheres_nice_render.ppm  lambertian_0.1_reflectance.ppm  lambertian_0.3_reflectance.ppm  lambertian_0.5_reflectance_with_gamma_corr.ppm  lambertian_0.7_reflectance.ppm  lambertian_0.9_reflectance.ppm  lambertian_0.9_reflectance_with_gamma_corr.ppm
Coarv-lancer2rayons/: CMakeLists.txt  camera.h  color.h  hittable.h  hittable_list.h  interval.h  main.cpp  main.h  material.h  rtweekend.h  sphere.h  vec3.cpp  vec3.h
